--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<!-- Core controller -->
 	<script type="text/javascript" src="js/game.js"></script>
-
+	<script type="text/javascript" src="js/classes/registry.js"></script>
 
 	<!-- Collections -->
 	<script type="text/javascript" src="js/collections/tileCollection.js"></script>
