Heroes and adventure countdown added.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 	<!-- Core controller -->
 	<script type="text/javascript" src="js/game.js"></script>
 	<script type="text/javascript" src="js/classes/registry.js"></script>
+	<script type="text/javascript" src="js/controllers/controllerHero.js"></script>
 
 	<!-- Collections -->
 	<script type="text/javascript" src="js/collections/tileCollection.js"></script>
 	<script type="text/javascript" src="js/collections/itemCollection.js"></script>
+	<script type="text/javascript" src="js/collections/heroCollection.js"></script>
 
 
 	<!-- Models -->
@@ -25,7 +27,10 @@
 	<script type="text/javascript" src="js/models/fieldModel.js"></script>
 	<script type="text/javascript" src="js/models/tileModel.js"></script>
 	<script type="text/javascript" src="js/models/environmentModel.js"></script>
-	<script type="text/javascript" src="js/models/itemModel.js"></script>
+	<script type="text/javascript" src="js/models/items/itemModel.js"></script>
+	<script type="text/javascript" src="js/models/items/containerItemModel.js"></script>
+	<script type="text/javascript" src="js/models/items/heroBaseItemModel.js"></script>
+	<script type="text/javascript" src="js/models/heroModel.js"></script>
 
 	<!-- Views -->
 	<script type="text/javascript" src="js/views/CAAT.DirectorView.js"></script>
@@ -33,6 +38,8 @@
 	<script type="text/javascript" src="js/views/CAAT.SceneGardenView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.TileView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.ItemView.js"></script>
+	<script type="text/javascript" src="js/views/CAAT.HeroView.js"></script>
+
 
 
 
