--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<script type="text/javascript" src="js/views/CAAT.DirectorView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.SceneView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.SceneGardenView.js"></script>
+	<script type="text/javascript" src="js/views/CAAT.EntityView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.TileView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.ItemView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.HeroView.js"></script>
