crude messenger added.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 	<script type="text/javascript" src="js/game.js"></script>
 	<script type="text/javascript" src="js/classes/registry.js"></script>
 	<script type="text/javascript" src="js/controllers/controllerHero.js"></script>
+	<script type="text/javascript" src="js/controllers/controllerMessenger.js"></script>
 
 	<!-- Collections -->
 	<script type="text/javascript" src="js/collections/tileCollection.js"></script>
 	<script type="text/javascript" src="js/collections/itemCollection.js"></script>
 	<script type="text/javascript" src="js/collections/heroCollection.js"></script>
+	<script type="text/javascript" src="js/collections/messageCollection.js"></script>
 
 
 	<!-- Models -->
@@ -31,6 +33,7 @@
 	<script type="text/javascript" src="js/models/items/containerItemModel.js"></script>
 	<script type="text/javascript" src="js/models/items/heroBaseItemModel.js"></script>
 	<script type="text/javascript" src="js/models/heroModel.js"></script>
+	<script type="text/javascript" src="js/models/messageModel.js"></script>
 
 	<!-- Views -->
 	<script type="text/javascript" src="js/views/CAAT.DirectorView.js"></script>
@@ -40,12 +43,13 @@
 	<script type="text/javascript" src="js/views/CAAT.TileView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.ItemView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.HeroView.js"></script>
-
+	<script type="text/javascript" src="js/views/CAAT.MessagePopupView.js"></script>
+	<script type="text/javascript" src="js/views/CAAT.MessageInfoView.js"></script>
 
 
 
 	<link rel="stylesheet" type="text/css" href="css/default.css" />
-	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=.5, maximum-scale=.5">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div id="container">
