image preloading, model cleanup

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 
 
 	<!-- Models -->
+	<script type="text/javascript" src="js/models/baseModel.js"></script>
 	<script type="text/javascript" src="js/models/userModel.js"></script>
 	<script type="text/javascript" src="js/models/fieldModel.js"></script>
 	<script type="text/javascript" src="js/models/tileModel.js"></script>
 	<script type="text/javascript" src="js/models/environmentModel.js"></script>
 	<script type="text/javascript" src="js/models/items/itemModel.js"></script>
 	<script type="text/javascript" src="js/models/items/containerItemModel.js"></script>
-	<script type="text/javascript" src="js/models/items/heroBaseItemModel.js"></script>
+	<script type="text/javascript" src="js/models/items/heroHomeItemModel.js"></script>
 	<script type="text/javascript" src="js/models/heroModel.js"></script>
 	<script type="text/javascript" src="js/models/messageModel.js"></script>
 
