static data implemented

--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 	<script type="text/javascript" src="js/libraries/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="js/libraries/caat.js"></script>
 
+	<!-- Helper funcs -->
 	<script type="text/javascript" src="js/default.js"></script>
 
-	<!-- Core controller -->
+	<!-- Game Controllers -->
 	<script type="text/javascript" src="js/game.js"></script>
 	<script type="text/javascript" src="js/classes/registry.js"></script>
 	<script type="text/javascript" src="js/controllers/controllerHero.js"></script>
 	<script type="text/javascript" src="js/controllers/controllerMessenger.js"></script>
+	<script type="text/javascript" src="js/controllers/controllerStaticData.js"></script>
 
 	<!-- Collections -->
 	<script type="text/javascript" src="js/collections/tileCollection.js"></script>
 	<script type="text/javascript" src="js/collections/itemCollection.js"></script>
 	<script type="text/javascript" src="js/collections/heroCollection.js"></script>
 	<script type="text/javascript" src="js/collections/messageCollection.js"></script>
-
 
 	<!-- Models -->
 	<script type="text/javascript" src="js/models/baseModel.js"></script>
@@ -48,14 +49,18 @@
 	<script type="text/javascript" src="js/views/CAAT.MessageInfoView.js"></script>
 
 
+	<!-- Content File JSON -->
+	<script type="text/javascript" src="data/itemData.js"></script>	
 
 	<link rel="stylesheet" type="text/css" href="css/default.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
 <div id="container">
 	<canvas id="gameView" name="gameView"/>
 </div>
 </body>
+
 </html>
 
