partial adventure support, fixes for containers

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 	<script type="text/javascript" src="js/controllers/controllerHero.js"></script>
 	<script type="text/javascript" src="js/controllers/controllerMessenger.js"></script>
 	<script type="text/javascript" src="js/controllers/controllerStaticData.js"></script>
+	<script type="text/javascript" src="js/controllers/controllerAdventure.js"></script>
+	<script type="text/javascript" src="js/controllers/controllerEnvironment.js"></script>
+
 
 	<!-- Collections -->
 	<script type="text/javascript" src="js/collections/tileCollection.js"></script>
 	<script type="text/javascript" src="js/collections/itemCollection.js"></script>
 	<script type="text/javascript" src="js/collections/heroCollection.js"></script>
+	<script type="text/javascript" src="js/collections/environmentCollection.js"></script>
 	<script type="text/javascript" src="js/collections/messageCollection.js"></script>
 
 	<!-- Models -->
@@ -34,6 +38,7 @@
 	<script type="text/javascript" src="js/models/items/itemModel.js"></script>
 	<script type="text/javascript" src="js/models/items/containerItemModel.js"></script>
 	<script type="text/javascript" src="js/models/items/heroHomeItemModel.js"></script>
+	<script type="text/javascript" src="js/models/items/equipmentItemModel.js"></script>
 	<script type="text/javascript" src="js/models/heroModel.js"></script>
 	<script type="text/javascript" src="js/models/messageModel.js"></script>
 
