--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	<script type="text/javascript" src="js/views/CAAT.HeroView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.MessagePopupView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.MessageInfoView.js"></script>
+	<script type="text/javascript" src="js/views/CAAT.HeroDetailView.js"></script>
 
 
 	<!-- Content File JSON -->
