companion home items added, basic companion model

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- Game Controllers -->
 	<script type="text/javascript" src="js/game.js"></script>
 	<script type="text/javascript" src="js/classes/registry.js"></script>
-	<script type="text/javascript" src="js/controllers/controllerHero.js"></script>
+	<script type="text/javascript" src="js/controllers/controllerCharacter.js"></script>
 	<script type="text/javascript" src="js/controllers/controllerMessenger.js"></script>
 	<script type="text/javascript" src="js/controllers/controllerStaticData.js"></script>
 	<script type="text/javascript" src="js/controllers/controllerAdventure.js"></script>
@@ -26,6 +26,7 @@
 	<script type="text/javascript" src="js/collections/tileCollection.js"></script>
 	<script type="text/javascript" src="js/collections/itemCollection.js"></script>
 	<script type="text/javascript" src="js/collections/heroCollection.js"></script>
+	<script type="text/javascript" src="js/collections/companionCollection.js"></script>	
 	<script type="text/javascript" src="js/collections/environmentCollection.js"></script>
 	<script type="text/javascript" src="js/collections/messageCollection.js"></script>
 
@@ -38,9 +39,12 @@
 	<script type="text/javascript" src="js/models/items/itemModel.js"></script>
 	<script type="text/javascript" src="js/models/items/containerItemModel.js"></script>
 	<script type="text/javascript" src="js/models/items/heroHomeItemModel.js"></script>
+	<script type="text/javascript" src="js/models/items/companionHomeItemModel.js"></script>
 	<script type="text/javascript" src="js/models/items/equipmentItemModel.js"></script>
 	<script type="text/javascript" src="js/models/heroModel.js"></script>
+	<script type="text/javascript" src="js/models/companionModel.js"></script>	
 	<script type="text/javascript" src="js/models/messageModel.js"></script>
+	
 
 	<!-- Views -->
 	<script type="text/javascript" src="js/views/CAAT.DirectorView.js"></script>
@@ -53,6 +57,7 @@
 	<script type="text/javascript" src="js/views/CAAT.MessagePopupView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.MessageInfoView.js"></script>
 	<script type="text/javascript" src="js/views/CAAT.HeroDetailView.js"></script>
+	<script type="text/javascript" src="js/views/CAAT.AdventureView.js"></script>
 
 
 	<!-- Content File JSON -->
