--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 
 	<!-- Content File JSON -->
 	<script type="text/javascript" src="data/itemData.js"></script>	
+	<script type="text/javascript" src="data/characterData.js"></script>	
+
 
 	<link rel="stylesheet" type="text/css" href="css/default.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
